src/objects/UST_Event_Appointment_Type__c.object
<CustomObject>
    <description>List of available appointments for a session</description>
    <fields>
        <fullName>Appointment_Category__c</fullName>
        <label>Appointment Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Appointment_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Limits__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <description>The amount of appointments that can be made by this appointment type. Example Lunch would only be once, but you could have multiple coach visit (but you want a limit).</description>
        <inlineHelpText>The amount of appointments that can be made by this appointment type. Example Lunch would only be once, but you could have multiple coach visit (but you want a limit).</inlineHelpText>
        <label>Appointment Limits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Type_Status__c</fullName>
        <description>If an appointment is inactive it will cease to an option on all event instances. Defaults to active.</description>
        <inlineHelpText>If an appointment is inactive it will cease to an option on all event instances. Defaults to active.</inlineHelpText>
        <label>Appointment Type Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Appointment_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Appointment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Add_Time__c</fullName>
        <description>Auto populate this appointment time when this appointment is added to a registration</description>
        <inlineHelpText>Auto populate this appointment time when this appointment is added to a registration</inlineHelpText>
        <label>Auto Add Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Auto_Confirm_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the appointment is added to the event a confirm status, rather than a requested status, will be applied.</description>
        <inlineHelpText>When the appointment is added to the event a confirm status, rather than a requested status, will be applied.</inlineHelpText>
        <label>Auto Confirm Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_add_building__c</fullName>
        <description>Auto assign this building to a requested appointment.</description>
        <inlineHelpText>Auto assign this building to a requested appointment.</inlineHelpText>
        <label>Auto add building</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chosen_State__c</fullName>
        <description>Defines the state of the appointment. None: must be selected by user, Added: Added to selected appointments but can be removed, Added and Required: Added to appointments and can not be removed.</description>
        <inlineHelpText>Defines the state of the appointment. None: must be selected by user, Added: Added to selected appointments but can be removed, Added and Required: Added to appointments and can not be removed.</inlineHelpText>
        <label>Chosen State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Added and Required</fullName>
                </value>
                <value>
                    <fullName>Added but not shown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Picklist__c</fullName>
        <description>If registrant input is set to pick list this is where you enter a return separated list of items you wish to appear in that list.</description>
        <inlineHelpText>If registrant input is set to pick list this is where you enter a return separated list of items you wish to appear in that list.</inlineHelpText>
        <label>Custom Picklist</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Available_End__c</fullName>
        <description>The date when this appointment type will not longer be an option. Leaving blank means this appointment will be indefinitely available.</description>
        <inlineHelpText>The date when this appointment type will not longer be an option. Leaving blank means this appointment will be indefinitely available.</inlineHelpText>
        <label>Date Available End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Available_Start__c</fullName>
        <description>The date this appointment type will begin to be available (if blank it will always be available).</description>
        <inlineHelpText>The date this appointment type will begin to be available (if blank it will always be available).</inlineHelpText>
        <label>Date Available Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Week_Availability__c</fullName>
        <description>This option will only be available on the defined days of the week. It will be available all days if no items are selected.</description>
        <inlineHelpText>This option will only be available on the defined days of the week. It will be available all days if no items are selected.</inlineHelpText>
        <label>Day of Week Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Rich text description of event that can include links and formatting.</description>
        <inlineHelpText>Rich text description of event that can include links and formatting.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_Not_Show_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not show this appointment&apos;s time on itinerary generation.</description>
        <inlineHelpText>Do not show this appointment&apos;s time on itinerary generation.</inlineHelpText>
        <label>Do Not Show Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registrant_Input__c</fullName>
        <description>Optional: Choose a type of input you wish to record from the registrant upon appointment registration.</description>
        <inlineHelpText>Optional: Choose a type of input you wish to record from the registrant upon appointment registration.</inlineHelpText>
        <label>Registrant Input</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Custom pick list</fullName>
                </value>
                <value>
                    <fullName>Required custom pick list</fullName>
                </value>
                <value>
                    <fullName>Required text box</fullName>
                </value>
                <value>
                    <fullName>Text box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the client is required to choose this appointment and any choices related to it.</description>
        <inlineHelpText>When checked the client is required to choose this appointment and any choices related to it.</inlineHelpText>
        <label>Required Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrict_To_Instance_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This allows a appointment type to only be shown on UST Event Instances with matching titles. Select one instance with the desired title (it doesn&apos;t matter which one) and all instance with that same title will have this appointment. All non-matching titles will NOT contain this appointment. This is an entirely optional setting.</description>
        <inlineHelpText>Appointment type to only be shown on UST Event Instances with matching titles to instance selected here. All other instance with non-matching titles will not include this appointment.</inlineHelpText>
        <label>Restrict To Instance Title</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.UST_Event__c</field>
                <operation>equals</operation>
                <valueField>UST_Event_Instance__c.Event__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UST_Event_Instance__c</referenceTo>
        <relationshipLabel>UST Event Appointment Types</relationshipLabel>
        <relationshipName>UST_Event_Appointment_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>99</defaultValue>
        <description>Enter a number to sort. 1 is first, 2 is second, ect. No value will sort last in default Salesforce sort.</description>
        <inlineHelpText>Enter a number to sort. 1 is first, 2 is second, ect. No value will sort last in default Salesforce sort.</inlineHelpText>
        <label>Sort Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of appointment in 255 characters or less</description>
        <inlineHelpText>Title of appointment in 255 characters or less</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UST_Event__c</fullName>
        <label>Event</label>
        <referenceTo>UST_Event__c</referenceTo>
        <relationshipLabel>UST Event Appointment Types</relationshipLabel>
        <relationshipName>UG_Event_Appointment_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>UST Event Appointment Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Appointment_Category__c</columns>
        <columns>Appointment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>UG Event Appointment Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Appointment Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>